# vyatta-sip-freeswitch

./: .frlog  .gitignore  AUTHORS  Makefile.am  NEWS  configure.ac
conf/: context_default.xml
debian/: README  changelog  control  copyright  lintian  rules  vyatta-sip-freeswitch.postinst  vyatta-sip-freeswitch.postinst.in
lib/Vyatta/FreeSWITCH/: Config.pm  TestConfig.pm
scripts/: vyatta-freeswitch-vars  vyatta-freeswitch.pl  vyatta-show-interfaces2.pl
templates-cfg/service/sip/: node.def
templates-cfg/service/sip/acl/: node.def
templates-cfg/service/sip/areacode/: node.def
templates-cfg/service/sip/billing/: node.def
templates-cfg/service/sip/cdr/: node.def
templates-cfg/service/sip/cli/: node.def
templates-cfg/service/sip/codecs/: node.def
templates-cfg/service/sip/country/: node.def
templates-cfg/service/sip/db/: node.def
templates-cfg/service/sip/default-language/: node.def
templates-cfg/service/sip/description/: node.def
templates-cfg/service/sip/dialplan/: node.def
templates-cfg/service/sip/domain-name/: node.def
templates-cfg/service/sip/dump-cores/: node.def
templates-cfg/service/sip/language/: node.def
templates-cfg/service/sip/loglevel/: node.def
templates-cfg/service/sip/max-sessions/: node.def
templates-cfg/service/sip/mode/: node.def
templates-cfg/service/sip/modules/: node.def
templates-cfg/service/sip/multiple-registrations/: node.def
templates-cfg/service/sip/odbc/: node.def
templates-cfg/service/sip/profile/: node.def
templates-cfg/service/sip/sessions-per-second/: node.def
templates-cfg/service/sip/user/: node.def
templates-op/show/sip/: node.def
test/: run.sh  t.pl
tmp/dialplan/: features.xml
tmp/dialplan/default/: 00.xml  00_lincom_089.xml  01_Talking_Clock.xml  10_gw.xml
tmp/dialplan/public/: 00-lincom3000-089.xml  lincom.xml
tmp/extension/: node.def
(+118 files in other folders)
